[package]
name = "sippy"
version = "0.1.0"
authors = ["stefano <s.kouroupis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
get_if_addrs = "0.5.3"
phf = { version = "0.8.0", features = ["macros"] }
md5 = "0.7.0"
rand = "0.7.3"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.53"
rsip = { git = "https://github.com/vasilakisfil/rsip.git" }
uuid = "0.8.2"
nom = "7.1.0"