[package]
name = "tiggy"
version = "0.1.0"
authors = ["stefano <s.kouroupis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
if-addrs = "0.7.0"
tokio = { version = "1.21.2", features = ["full"] }
md5 = "0.7.0"
rand = "0.7.3"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.53"
rsip = { git = "https://github.com/vasilakisfil/rsip.git" }
uuid = "0.8.2"
nom = "7.1.1"
chrono = "0.4.22"
cron = "0.12.0"
sdp-rs = "0.2.1"
log = "0.4.17"
rocket = "0.5.0-rc.2"
yansi = "0.5.1"
pcap = "0.11.0"
etherparse = "0.12.0"